--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 body {
   font-family: Helvetica;
   font-size: 14px;
+  margin-left:50px ;
 }
 
-.container {
+#root .container {
   text-align: center;
+  
 }
 
 p {
@@ -15,6 +17,9 @@ p {
 
 .tooltip {
   position: relative;
+  margin-top: auto;
+  text-decoration: brown;
+
 }
 
 .tooltip-trigger {
@@ -46,7 +51,36 @@ p {
  }
 
 
-.
+ .tooltip-left {
+  top: 50%;
+  right: 100%;
+  padding-bottom: 9px;
+  transform: translateX(-50%);
+}
+.tooltip-left::after {
+   border-left: 9px solid transparent;
+   border-right: 9px solid transparent;
+   border-top: 9px solid blue;
+   bottom: 0;
+   left: 50%;
+   transform: translateX(-50%);
+ }
+
+
+ .tooltip-right {
+  top: 50%;
+  left: 100%;
+  padding-bottom: 9px;
+  transform: translateX(-50%);
+}
+.tooltip-right::after {
+   border-left: 9px solid transparent;
+   border-right: 9px solid transparent;
+   border-top: 9px solid blue;
+   bottom: 0;
+   left: 50%;
+   transform: translateX(-50%);
+ }
 
 .tooltip-message {
   background: blue;
